[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-franky"
version = "0.1.1"
description = "ZeroMQ client/server bridge for franky"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
	{ name = "Nick Walker" }
]

dependencies = [
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "cloudpickle>=2.2.0"
]

[project.scripts]
zero-franky-server = "zero_franky.server_cli:main"
zero_franky_server = "zero_franky.server_cli:main"

[project.optional-dependencies]

server = [
    "franky-control"
    ]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
    ]

[tool.uv.sources]
franky-control = { url = "https://github.com/nickswalker/franky/releases/download/wheels-libfranka-0.21.1/franky_control-1.1.3+impedance.libfranka.0.21.1-cp312-cp312-manylinux_2_28_x86_64.whl" }
